--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cloud_firestore: ^3.1.13
   firebase_auth: ^3.3.15
   lottie: ^1.3.0
+  google_fonts: ^2.3.2
+  sqflite: ^2.0.2+1
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
